# Advent-of-Code

./: .gitignore  README.md  count.rs  echo  script.sh
2015/: README.md
2016/: .rustfmt.toml  README.md
2017/: README.md  compile.sh
2018/: README.md  compile.sh  exec.sh
2019/: .gitignore  README.md  compile.sh
2020/: Dockerfile  README  README.md  exec.sh
2021/: README.md  (+2 more)
2023/: Cargo.toml  README.md
2023/day_01/: main.rs
2023/day_02/: Cargo.toml  main.rs
2023/day_03/: Cargo.toml  main.rs
2023/day_03/src/: main.rs
2023/day_04/: Cargo.toml  main.rs
2023/day_04/src/: main.rs
2023/day_05/: Cargo.toml  main.rs
2023/day_06/: main.rs
2023/day_06/src/: main.rs
2023/day_07/: Cargo.toml  main.rs
2023/day_08/: Cargo.toml  main.rs
2023/day_08/src/: main.rs
2023/day_09/: main.rs
2023/day_09/src/: main.rs
2023/day_10/: Cargo.toml  main.rs
2023/day_11/: main.rs
2023/day_11/src/: main.rs
2023/day_12/: main.rs
2023/day_13/: main.rs
2023/day_13/src/: main.rs
2023/day_14/: Cargo.toml  main.rs
2023/day_15/: Cargo.toml  main.rs
2023/day_16/: Cargo.toml  main.rs
2023/day_16/src/: main.rs
2023/day_17/: Cargo.toml  main.rs
2023/day_17/src/: main.rs
2023/day_18/: main.rs
2023/day_19/: main.rs
2023/day_20/: Cargo.toml  main.rs
2023/day_21/: Cargo.toml  main.rs
2023/day_21/src/: main.rs
2023/day_22/: main.rs
2023/day_22/src/: main.rs
2023/day_23/: Cargo.toml  main.rs
2023/day_23/src/: main.rs
2023/day_24/: main.rs
2023/day_25/: Cargo.toml  main.rs  py.py
2023/templates/: bfs.rs  main.rs  permutations.rs
(+377 files in other folders)
